# genius_mcp

./: LICENSE  README.md  config.py  genius_api.py  mcp_server.py  pyproject.toml  requirements.txt  scraper.py  utils.py
src/: .env.example  __init__.py  server.py
src/api/: genius_api.py  scraper.py
src/core/: __init__.py  cache_manager.py  config.py  rate_limiter.py
src/tools/: annotation_tool.py  artist_tool.py  lyrics_tool.py  search_tool.py  song_tool.py
src/utils/: utils.py
